--- a/package.json
+++ b/package.json
@@ -18,6 +18,14 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@kolkov/ngx-gallery": "^2.0.1",
+    "bootstrap": "^5.3.3",
+    "ng-image-gallery": "^2.1.4",
+    "ng2-file-upload": "^7.0.1",
+    "ngx-bootstrap": "^19.0.2",
+    "ngx-spinner": "^17.0.0",
+    "ngx-timeago": "^3.0.0",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
